err/7297929.66.err
  File "condor_coffea_WS.py", line 86
    """)
      ^
SyntaxError: invalid syntax
xrdcp: No such file or directory processing tree_66.root
